<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="splash_text">Tip Calculator</string>
    <string name="enterAmount">Enter Bill Amount:</string>
    <string name="selectTip">Select Tip Amount</string>
    <string name="ten">10%</string>
    <string name="fifteen">15%</string>
    <string name="twenty">20%</string>
    <string name="other">Other</string>
    <string name="tipTotal" />
    <string name="txtPercent">%</string>
    <string name="txtDollarSign">$</string>
    <string name="hintText"><i>Bill Amount</i></string>
    <string name="tipHint"><i>Tip</i></string>
</resources>
